Fix sidebar synchronization status overflow

--- a/html_source/src/app/sidebar/sidebar.component.scss
+++ b/html_source/src/app/sidebar/sidebar.component.scss
@@ -315,7 +315,7 @@
   align-items: center;
   justify-content: flex-start;
   flex: 0 0 7rem;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 
   .status-container {
     position: relative;
